Move `Calc` demo into `examples`

--- a/examples/calc/index.html
+++ b/examples/calc/index.html
@@ -1,14 +1,11 @@
-<!DOCTYPE HTML>
+<!doctype html>
 
 <head>
   <title>Calculator App</title>
 </head>
 
 <style>
-body {
-  font-family: "Fira Code";
-}
-
+  * { font-family: "Fira Code Retina", monospace; }
 </style>
 
 <body>
